Issue #17487: Add `Rewrite:UpgradeToJava17`
- https://github.com/checkstyle/checkstyle/pull/17730