@@ -1180,15 +1180,13 @@ public class MavenCli {
             //
             // There are too many ConfigurationProcessors so we don't know which one to run so report the error.
             //
-            StringBuilder sb = new StringBuilder(String.format(
-                    "%nThere can only be one user supplied ConfigurationProcessor, there are %s:%n%n",
+            StringBuilder sb = new StringBuilder("%nThere can only be one user supplied ConfigurationProcessor, there are %s:%n%n".formatted(
                     userSuppliedConfigurationProcessorCount));
             for (Entry<String, ConfigurationProcessor> entry : configurationProcessors.entrySet()) {
                 String hint = entry.getKey();
                 if (!hint.equals(SettingsXmlConfigurationProcessor.HINT)) {
                     ConfigurationProcessor configurationProcessor = entry.getValue();
-                    sb.append(String.format(
-                            "%s%n", configurationProcessor.getClass().getName()));
+                    sb.append("%s%n".formatted(configurationProcessor.getClass().getName()));
                 }
             }
             throw new Exception(sb.toString());
